--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Jether Haniel</h1>
+				<h1><a href="#intro">Jether Haniel</a></h1>
 				<nav>
 					<ul>
-						<li><a href="#intro">Intro</a></li>
 						<li><a href="#one">What I Do</a></li>
 						<li><a href="#two">Who I Am</a></li>
 						<li><a href="#work">My Work</a></li>
@@ -24,11 +23,10 @@
 			</header>
 
 		<!-- Intro -->
-			<section class="main style1 dark fullscreen">
+			<section id="intro" class="main style1 dark fullscreen">
 				<video id="videoBG" autoplay muted loop>
 						<source src="videos/bg-video.mp4" type="video/mp4">
 				</video>
-			<div class="fs-me">
 				<div class="content">
 					<header>
 						<h2>Jether Haniel</h2>
@@ -38,18 +36,17 @@
 						<a href="#one" class="button style2 down">More</a>
 					</footer>
 				</div>
-			</div>
+
 			</section>
 
 		<!-- One -->
 			<section id="one" class="main style2 right dark fullscreen">
+
 				<div class="content box style2">
 					<header>
 						<h2>What I Do</h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					<p>I can do basic to intermediate creation in webpages, currently studying in handling databases, and app development. I'm also a video editor, photo edito and short film maker.</p>
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
 			</section>
@@ -60,9 +57,7 @@
 					<header>
 						<h2>Who I Am</h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					<p>I'm currently a BSIT student in Adventist University of the Philippines, but soon to be making successes in the industry with my current and future knowledge in the field.</p>
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
@@ -71,10 +66,8 @@
 			<section id="work" class="main style3 primary">
 				<div class="content">
 					<header>
-						<h2>My Work</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-						Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis
-						arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>
+						<h2>My Skills</h2>
+						<p>What I've been worked with so far as a student.</p>
 					</header>
 
 					<!-- Gallery  -->
@@ -107,7 +100,7 @@
 				<div class="content">
 					<header>
 						<h2>Say Hello.</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.</p>
+						<p>Get in touch with me here or in my social media websites!</p>
 					</header>
 					<div class="box">
 						<form method="post" action="#">
@@ -132,14 +125,12 @@
 						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>
+						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
 					</ul>
 
 				<!-- Menu -->
 					<ul class="menu">
-						<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Jether Haniel</li><li></li>
 					</ul>
 
 			</footer>
