--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta name="twitter:creator" content="@JetherHaniel">
 		<meta name="twitter:title" content="Jether Haniel - Personal Portfolio">
 		<meta name="twitter:description" content="A personal website for Jether Haniel that aims to share his knowledge and skills.">
-		<meta name="twitter:image" content="/images/Jetsh.jpg">
+		<meta name="twitter:image" content="https://scontent.xx.fbcdn.net/v/t1.15752-9/140560161_322607525695263_4241482817901642769_n.jpg?_nc_cat=103&ccb=2&_nc_sid=58c789&_nc_eui2=AeEo5wACzinfCYUTVDHZfJgeA8sHGKmJOHUDywcYqYk4dclbgUK9DzDt48DhkvM_DoYosjpVBPKXMyGrF9Gm3uTI&_nc_ohc=i9tvHvn3AsIAX9MoXix&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=acfb0f7020868fa31170c95e52f875e8&oe=602A2791">
 		<!-- Facebook Card -->
 		<meta property="og:url" content="https://portjetherhaniel.tk/"/>
 		<meta property="og:type" content="Portfolio"/>
